--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
+src/main/resources/twitter.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
