--- a/kafka-streams-filter-tweets/pom.xml
+++ b/kafka-streams-filter-tweets/pom.xml
@@ -26,6 +26,14 @@
             <artifactId>kafka-streams</artifactId>
             <version>2.0.0</version>
         </dependency>
+
+        <!-- GSON library -->
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 
 </project>
